--- a/assets/index.css
+++ b/assets/index.css
@@ -19,6 +19,12 @@ body > * {
 button{
   height: 25vmin;
   width: 25vmin;
+  font-size: 15vmin;
+  cursor: pointer;
+}
+button:disabled{
+  color: black;
+  cursor: not-allowed;
 }
 header, footer{
   display: flex;
